--- a/src/etc/template.yaml
+++ b/src/etc/template.yaml
@@ -31,6 +31,7 @@ objects:
         type: "Git"
         git:
           uri: "https://github.com/donovanmuller/bison-bank.git"
+          ref: "basic"
       triggers:
         - type: "GitHub"
           github:
