--- a/src/etc/template.yaml
+++ b/src/etc/template.yaml
@@ -19,9 +19,12 @@ objects:
       name: "springboot-maven3-centos"
     spec:
       tags:
-        - from:
-          kind: DockerImage
-          name: codecentric/springboot-maven3-centos
+        - name: latest
+          annotations:
+            openshift.io/imported-from: codecentric/springboot-maven3-centos
+          from:
+            kind: DockerImage
+            name: codecentric/springboot-maven3-centos
   - apiVersion: v1
     kind: "BuildConfig"
     metadata:
@@ -69,6 +72,7 @@ objects:
         type: Git
         git:
           uri: "https://github.com/donovanmuller/bison-bank.git"
+          ref: "basic"
       strategy:
         type: "Source"
         sourceStrategy:
